# kindly

./: .gitignore  README.md  docker-compose.yaml
.github/: claude-review-prompt.md
.github/scripts/: encode-state.ts  generate-summary.ts  process-review.ts
.github/scripts/claude-review/: create-inline-comments.js  create-inline-comments.ts  detect-ignore-commands.js  detect-ignore-commands.ts  encode-state.js  encode-state.ts  generate-summary.js  generate-summary.ts  get-previous-state.js  get-previous-state.ts  prepare-review-context.js  prepare-review-context.ts  process-review.js  process-review.ts  update-comments.js  update-comments.ts
.github/workflows/: claude-review.yaml
backend/: .env.example  pyproject.toml
backend/app/: dependencies.py  main.py
backend/app/interfaces/: auth_service.py  exceptions.py  quest_service.py
backend/app/models/: __init__.py  badge_achievement.py  quest.py  request_type.py  type_of.py  user.py
backend/app/routers/: badge.py  quest.py
backend/app/services/: ai_service.py  application_service.py  auth_service.py  badge_service.py  common_service.py  quest_service.py  request_service.py
backend/scripts/: insert_data.py
backend/tests/: test_badge_service.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: DangerousWidget.tsx
frontend/src/hooks/: useBadgeNotifications.ts
frontend/src/pages/: BadgeLeaderboardPage.tsx  MyBadgesPage.tsx
frontend/src/services/: auth.service.ts  badge.service.ts  quest.service.ts
frontend/src/test/: setup.ts  (+2 more)
(+17 files in other folders)
